# archie

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  calculate_trigger.py  control_pb2.py  control_pb2.pyi  controller.py  data_pb2.py  data_pb2.pyi  fault-readme.md  fault.json  fault_pb2.py  fault_pb2.pyi  faultclass.py  goldenrun.py  hdf5-readme.md  hdf5logger.py  pytest.ini  qemuconf.json  requirements-dev.txt  requirements.txt  test.sh  util.py
analysis/: Readme.md  analysis.ipynb  analysisfunctions.py  fault-aes.json  sahadiagonalfault.py  tenthRound.py
emulation_worker/: Cargo.toml  pyproject.toml
emulation_worker/src/: architecture.rs  arm.rs  hooks.rs  lib.rs  logs.rs  structs.rs
emulation_worker/src/hooks/: util.rs
faultplugin/: LICENSE  Makefile  control.pb-c.c  control.pb-c.h  data.pb-c.c  data.pb-c.h  fault.pb-c.c  fault.pb-c.h  fault_injection.c  fault_injection.h  fault_list.c  fault_list.h  faultdata.c  faultdata.h  faultplugin.c  faultplugin.h  memmap_collection.c  memmap_collection.h  memmapdump.c  memmapdump.h  registerdump.c  registerdump.h  singlestep.c  singlestep.h  tb_exec_data_collection.c  tb_exec_data_collection.h  tb_faulted_collection.c  tb_faulted_collection.h  tb_info_data_collection.c  tb_info_data_collection.h
miniblink/: README.md  miniblink.elf  miniblink.list
protobuf/: control.proto  control_pb2.py  control_pb2.pyi  data.proto  data_pb2.py  data_pb2.pyi  fault.proto  fault_pb2.py  fault_pb2.pyi  generate_protobuf.sh
tests/: Readme.md  requirements.txt  test_analysisfunctions.py  test_controller.py  (+1 more)
(+44 files in other folders)
