[package]
name = "emulation_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "emulation_worker"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
unicorn-engine = "2.0.0"
num = "0.4.0"
priority-queue = "1.3.1"
capstone = "0.11.0"
log = "0.4.17"
simplelog = "0.12.1"
time = "0.3.20"
